# exfiltration

./: .gitignore  Cargo.toml  README.md
aggregator/: Cargo.toml
aggregator/src/: capture.rs  config.rs  main.rs
exfiltration/: Cargo.toml
exfiltration/src/: main.rs
messages/: Cargo.toml
messages/src/: lib.rs
src/: main.rs
src/exfiltrators/: dns.rs  mod.rs
